syntax = "proto3";

package aspen.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/synnaxlabs/aspen/transport/grpc/v1";

service FeedbackService {
  rpc Exec(FeedbackMessage) returns (google.protobuf.Empty);
}

message FeedbackMessage {
  uint32 sender = 1;
  repeated OperationDigest digests = 2;
}

message OperationDigest {
  int64 version = 1;
  uint32 leaseholder = 2;
  bytes key = 3;
}

service TxService {
  rpc Exec(TxRequest) returns (TxRequest);
}

service LeaseService {
  rpc Exec(TxRequest) returns (google.protobuf.Empty);
}

message TxRequest {
  uint32 sender = 1;
  uint32 leaseholder = 2;
  repeated Operation operations = 3;
}

message Operation {
  uint32 variant = 1;
  uint32 leaseholder = 2;
  int64 version = 3;
  bytes key = 4;
  bytes value = 5;
}

service RecoveryService {
  rpc Exec(stream RecoveryRequest) returns (stream RecoveryResponse);
}

message RecoveryRequest {
  int64 high_water = 1;
}

message RecoveryResponse {
  repeated Operation operations = 1;
}
